fix wrong position scrolled after click navbar link

--- a/css/global/title.css
+++ b/css/global/title.css
@@ -1,10 +1,11 @@
 .title {
     position: relative;
+    scroll-margin-top: 5rem;
     text-align: center;
-    overflow: hidden;
+    overflow: clip;
     border-bottom: none;
-    --width: 0%;
     margin: 0;
+    --width: 0%;
 }
 
 .title + p {
